--- a/front/styles/App.css
+++ b/front/styles/App.css
@@ -71,13 +71,28 @@ h1 {
   cursor: pointer;
 }
 
-.fa-trash {
-  margin-left: 0.75rem;
+.Todo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #8758ff;
+  color: #fff;
+  padding: 0.75rem 1rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  cursor: pointer;
 }
 
 .completed {
   color: #c5aeff;
   text-decoration: line-through;
+}
+
+.icons {
+  width: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .copyright {
